--- a/packages/TaraDraw/x11/Makefile
+++ b/packages/TaraDraw/x11/Makefile
@@ -6,7 +6,7 @@ LIBDIR := $(shell ../bin/TaraDraw-config --libdir)
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
-CXXFLAGS += -Wall -Wextra $(shell ./bin/TaraDraw-config --cflags_internal)
+CXXFLAGS += -Wall -Wextra $(shell ../bin/TaraDraw-config --cflags_internal)
 
 $(LIBDIR)/libTD.a: $(OBJECTS)
 	mkdir -p $(LIBDIR)
