14 updated documentation, versioning

--- a/dcapp.app/Contents/Info.plist
+++ b/dcapp.app/Contents/Info.plist
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.0 alpha</string>
+	<string>2.0.0 alpha</string>
 	<key>CFBundleSignature</key>
 	<string>dcap</string>
 	<key>CFBundleVersion</key>
-	<string>272</string>
+	<string>273</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>© 2021 NASA</string>
 	<key>NSPrincipalClass</key>
