15 cleaned makefile, moved blinker to new logicutils package

--- a/packages/Makefile
+++ b/packages/Makefile
@@ -3,12 +3,14 @@
 
 all:
 	${MAKE} -C basicutils
+	${MAKE} -C logicutils
 	${MAKE} -C TaraDraw
 	${MAKE} -C RenderLib
 	${MAKE} -C PixelStream
 
 clean:
 	${MAKE} -C basicutils clean
+	${MAKE} -C logicutils clean
 	${MAKE} -C TaraDraw clean
 	${MAKE} -C PixelStream clean
 	${MAKE} -C RenderLib clean
