--- a/samples/blinker/logic/Makefile
+++ b/samples/blinker/logic/Makefile
@@ -1,32 +1,33 @@
 .PHONY: clean
 
 DCAPP_HOME ?= $(abspath $(dir $(lastword $(MAKEFILE_LIST)))/../../..)
-BASIC_UTILS ?= ${DCAPP_HOME}/packages/basicutils
+BASIC_UTILS ?= ${DCAPP_HOME}/packages/logicutils
 PARAM_FILE := ../blinker.xml
 
 ifneq ($(wildcard ${DCAPP_HOME}/dcapp.app/Contents/dcapp-config),)
-    DCAPPCONFIG := ${DCAPP_HOME}/dcapp.app/Contents/dcapp-config
+	DCAPPCONFIG := ${DCAPP_HOME}/dcapp.app/Contents/dcapp-config
 else
-    DCAPPCONFIG := dcapp-config
+	DCAPPCONFIG := dcapp-config
 endif
 
+OBJDIR := $(shell $(DCAPPCONFIG) --objdir)
 EXEPATH := $(shell ${DCAPPCONFIG} --exepath)
 
 ifneq ($(wildcard ${EXEPATH}/dcapp_genheader),)
-    GENHEADER := ${EXEPATH}/dcapp_genheader
+	GENHEADER := ${EXEPATH}/dcapp_genheader
 else
-    GENHEADER := dcapp_genheader
+	GENHEADER := dcapp_genheader
 endif
 
-#---------------------------------------------------
+# ----------------------------------------------------------------------------------------
 SOURCES := \
-	mylogic.cc \
-	${BASIC_UTILS}/blinker.cc
+	mylogic.cc
 
 HEADERS := \
 	${BASIC_UTILS}/blinker.hh
 
-OBJECTS := $(foreach obj, $(SOURCES:.cc=.o), $(dir $(obj))./$(notdir $(obj)))
+OBJECTS := $(foreach obj, $(SOURCES:.cc=.o), $(dir $(obj))$(OBJDIR)/$(notdir $(obj)))
+DCAPP_OBJECTS = ${BASIC_UTILS}/obj_linux_x86_64/blinker.o
 
 CXXFLAGS += -fPIC -Wall -std=c++11
 ifeq ($(shell $(DCAPPCONFIG) --ostype), linux)
@@ -34,19 +35,21 @@ CXXFLAGS += -D_GNU_SOURCE
 endif
 CXXFLAGS += -I.
 CXXFLAGS += $(sort $(foreach header, $(HEADERS), -I$(dir $(header))))
-#---------------------------------------------------
+
+# ----------------------------------------------------------------------------------------
 
 all: dcapp.hh mylogic.so
 
 dcapp.hh: ${PARAM_FILE}
 	${GENHEADER} ${PARAM_FILE} $@
 
-mylogic.so: ${OBJECTS}
+mylogic.so: ${OBJECTS}  ${DCAPP_OBJECTS}
 	${CXX} -Wall -shared $^ -o $@
 
 define BUILDOBJECT
 $(1): $(realpath $(dir $(1))../$(basename $(notdir $(1))).cc) dcapp.hh ${HEADERS}
-	${CXX} -c ${CXXFLAGS} $(dir $(1))./$(basename $(notdir $(1))).cc -o $(1)
+	mkdir -p $(dir $(1))
+	${CXX} -c ${CXXFLAGS} $(dir $(1))../$(basename $(notdir $(1))).cc -o $(1)
 endef
 $(foreach object, $(OBJECTS), $(eval $(call BUILDOBJECT, $(object))))
 
