--- a/packages/logicutils/Makefile
+++ b/packages/logicutils/Makefile
@@ -1,14 +1,14 @@
 .PHONY: clean
 
-OBJDIR := $(shell ./bin/basicutils-config --objdir)
-LIBDIR := $(shell ./bin/basicutils-config --libdir)
+OBJDIR := $(shell ./bin/logicutils-config --objdir)
+LIBDIR := $(shell ./bin/logicutils-config --libdir)
 
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
 CXXFLAGS += -std=c++11 -fPIC -Wall -Wextra
 
-$(LIBDIR)/libbasicutils.a: $(OBJECTS)
+$(LIBDIR)/liblogicutils.a: $(OBJECTS)
 	mkdir -p $(LIBDIR)
 	$(AR) $(ARFLAGS) $@ $^
 
