15 updated class names, added linux flag to makefile

--- a/packages/logicutils/Makefile
+++ b/packages/logicutils/Makefile
@@ -6,7 +6,10 @@ LIBDIR := $(shell ./bin/logicutils-config --libdir)
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
-CXXFLAGS += -std=c++11 -fPIC -Wall -Wextra
+CXXFLAGS = -std=c++11 -fPIC -Wall -Wextra
+ifeq ($(shell $(DCAPPCONFIG) --ostype), linux)
+CXXFLAGS += -D_GNU_SOURCE
+endif
 
 $(LIBDIR)/liblogicutils.a: $(OBJECTS)
 	mkdir -p $(LIBDIR)
