--- a/samples/Makefile
+++ b/samples/Makefile
@@ -1,9 +1,11 @@
 .PHONY: all clean
 
 all:
+	${MAKE} -C mask
 	${MAKE} -C ptz
 	${MAKE} -C screensaver
 
 clean:
+	${MAKE} -C mask clean
 	${MAKE} -C ptz clean
 	${MAKE} -C screensaver clean
