refs #21 function primitive working, needs cleanup

--- a/samples/Makefile
+++ b/samples/Makefile
@@ -1,11 +1,13 @@
 .PHONY: all clean
 
 all:
+	${MAKE} -C functions
 	${MAKE} -C mask
 	${MAKE} -C ptz
 	${MAKE} -C screensaver
 
 clean:
+	${MAKE} -C functions
 	${MAKE} -C mask clean
 	${MAKE} -C ptz clean
 	${MAKE} -C screensaver clean
