refs #21 added smiley smaple, updated logic structure

--- a/samples/functions/logic/Makefile
+++ b/samples/functions/logic/Makefile
@@ -9,6 +9,17 @@ else
 endif
 
 EXEPATH := $(shell ${DCAPPCONFIG} --exepath)
+OBJDIR := $(shell $(DCAPPCONFIG) --objdir)
+
+SOURCES := \
+    mylogic.cc \
+    ../smiley/smiley_logic.cc
+OBJECTS := $(foreach obj, $(SOURCES:.cc=.o), $(OBJDIR)/$(notdir $(obj)))
+
+CXXFLAGS += -fPIC -Wall -std=c++11
+ifeq ($(shell $(DCAPPCONFIG) --ostype), linux)
+CXXFLAGS += -D_GNU_SOURCE
+endif
 
 ifneq ($(wildcard ${EXEPATH}/dcapp_genheader),)
     GENHEADER := ${EXEPATH}/dcapp_genheader
@@ -16,9 +27,23 @@ else
     GENHEADER := dcapp_genheader
 endif
 
-mylogic.so: mylogic.cc ../functions.xml
+define genObjectRule
+$(OBJDIR)/$(basename $(notdir $(1))).o: dcapp.h $(1)
+	mkdir -p $(OBJDIR)
+	${CXX} -c ${CXXFLAGS} $(1) -o $(OBJDIR)/$(basename $(notdir $(1))).o
+endef
+
+all: mylogic.so
+
+mylogic.so: ${OBJECTS}
+	
 	${GENHEADER} ../functions.xml
-	${CXX} -fPIC -std=c++11 -Wall -Wextra -shared $< -o $@
+	${CXX} -Wall -Wextra -shared $^ -o $@
+
+$(foreach source, $(SOURCES), $(eval $(call genObjectRule, $(source))))
+
+dcapp.h: ../functions.xml
+	${GENHEADER} ../functions.xml $@
 
 clean:
-	${RM} dcapp.h mylogic.so
+	${RM} -rf dcapp.h mylogic.so $(OBJDIR)
