Update makefiles to remove opengl deprecated warnings from mac builds

--- a/osenv/Makefile
+++ b/osenv/Makefile
@@ -7,10 +7,10 @@ LIBDIR := $(shell ./bin/osenv-config --libdir)
 HEADERS := $(wildcard *.hh)
 ifeq ($(OSSPEC), MacOS)
     OBJECTS := $(foreach obj, $(patsubst %.mm, %.o, $(wildcard *.mm)), $(OBJDIR)/$(obj))
+    CXXFLAGS += -Wno-deprecated -Wno-deprecated-declarations
 else
     OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 endif
-
 $(LIBDIR)/libosenv.a: $(OBJECTS)
 	mkdir -p $(LIBDIR)
 	$(AR) $(ARFLAGS) $@ $^
